--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="profile"></div>
     </section>
     <section class="main-section">
-        <div class="about"></div>
+        <div class="about">
+            <h1>Coming Soon!!</h1>
+        </div>
         <div class="contents"></div>
         <div class="achievements"></div>
     </section>
